changed config of allowed orgins